--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
         "dev": "NODE_OPTIONS='--inspect' next dev",
         "build": "next build",
         "start": "next start",
-        "type-check": "tsc"
+        "type-check": "tsc",
+        "test": "jest",
+        "test:watch": "npm run test -- --watch"
     },
     "dependencies": {
         "antd": "^4.8.5",
@@ -15,11 +17,21 @@
         "styled-components": "^5.2.1"
     },
     "devDependencies": {
+        "@testing-library/dom": "^7.28.1",
+        "@testing-library/jest-dom": "^5.11.6",
+        "@testing-library/react": "^11.2.2",
+        "@testing-library/user-event": "^12.3.0",
+        "@types/jest": "^26.0.16",
         "@types/node": "^12.12.21",
         "@types/react": "^16.9.16",
         "@types/react-dom": "^16.9.4",
         "@types/styled-components": "^5.1.4",
+        "babel-jest": "^26.6.3",
         "babel-plugin-styled-components": "^1.12.0",
+        "jest": "^26.6.3",
+        "jest-watch-typeahead": "^0.6.1",
+        "mutationobserver-shim": "^0.3.7",
+        "ts-jest": "^26.4.4",
         "typescript": "4.0"
     },
     "license": "MIT"
