--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
         "target": "esnext",
         "baseUrl": "."
     },
-    "exclude": ["node_modules"],
+    "exclude": ["node_modules", "**/*.spec.ts", "**/*.spec.tsx", "**/*.test.ts", "**/*.test.tsx"],
     "include": ["**/*.ts", "**/*.tsx"]
 }
