--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "next": "latest",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
+        "react-icons": "^4.1.0",
+        "react-spring": "^8.0.27",
         "styled-components": "^5.2.1"
     },
     "devDependencies": {
