--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,10 @@
         "skipLibCheck": true,
         "strict": true,
         "target": "esnext",
-        "baseUrl": "."
+        "baseUrl": ".",
+        "paths": {
+            "@/components/*": ["components/*"]
+        }
     },
     "exclude": ["node_modules", "**/*.spec.ts", "**/*.spec.tsx", "**/*.test.ts", "**/*.test.tsx"],
     "include": ["**/*.ts", "**/*.tsx"]
