--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-icons": "^4.1.0",
-        "react-spring": "^8.0.27",
+        "react-spring": "^9.0.0-rc.3",
         "styled-components": "^5.2.1"
     },
     "devDependencies": {
