--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@graphql-tools/merge": "^6.2.6",
         "@graphql-tools/schema": "^7.1.2",
         "antd": "^4.8.5",
+        "apollo-server-micro": "^2.19.0",
         "graphql": "^15.4.0",
         "next": "latest",
         "react": "^16.12.0",
@@ -25,6 +26,12 @@
         "styled-components": "^5.2.1"
     },
     "devDependencies": {
+        "@graphql-codegen/cli": "^1.19.4",
+        "@graphql-codegen/plugin-helpers": "^1.18.2",
+        "@graphql-codegen/typescript": "^1.19.0",
+        "@graphql-codegen/typescript-operations": "^1.17.12",
+        "@graphql-codegen/typescript-react-apollo": "^2.2.1",
+        "@graphql-codegen/typescript-resolvers": "^1.18.0",
         "@testing-library/dom": "^7.28.1",
         "@testing-library/jest-dom": "^5.11.6",
         "@testing-library/react": "^11.2.2",
