--- a/package.json
+++ b/package.json
@@ -3,22 +3,31 @@
     "version": "1.0.0",
     "scripts": {
         "dev": "NODE_OPTIONS='--inspect' next dev && codegen",
-        "codegen": "graphql-let",
         "build": "yarn codegen && next build",
         "test": "yarn codegen && jest",
         "start": "next start",
         "test:watch": "npm run test -- --watch",
-        "type-check": "tsc"
+        "type-check": "tsc",
+        "codegen": "yarn graphql-codegen --watch",
+        "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
+        "dev:migrate": "npx prisma migrate dev --preview-feature && npx prisma db push --preview-feature",
+        "prisma:push": "npx prisma db push --preview-feature",
+        "generate:prisma": "prisma generate",
+        "generate:nexus": "ts-node --transpile-only -P nexus.tsconfig.json pages/api"
     },
     "dependencies": {
         "@apollo/client": "^3.3.6",
         "@graphql-tools/load-files": "^6.2.5",
         "@graphql-tools/merge": "^6.2.6",
         "@graphql-tools/schema": "^7.1.2",
+        "@nexus/schema": "^0.20.1",
+        "@prisma/client": "^2.13.0",
         "antd": "^4.8.5",
         "apollo-server-micro": "^2.19.0",
         "graphql": "^15.4.0",
         "next": "latest",
+        "nexus": "^1.0.0",
+        "nexus-plugin-prisma": "^0.27.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-icons": "^4.1.0",
@@ -32,6 +41,7 @@
         "@graphql-codegen/typescript-operations": "^1.17.12",
         "@graphql-codegen/typescript-react-apollo": "^2.2.1",
         "@graphql-codegen/typescript-resolvers": "^1.18.0",
+        "@prisma/cli": "^2.13.0",
         "@testing-library/dom": "^7.28.1",
         "@testing-library/jest-dom": "^5.11.6",
         "@testing-library/react": "^11.2.2",
@@ -43,6 +53,8 @@
         "@types/styled-components": "^5.1.4",
         "babel-jest": "^26.6.3",
         "babel-plugin-styled-components": "^1.12.0",
+        "concurrently": "^5.3.0",
+        "graphql-let": "^0.16.3",
         "jest": "^26.6.3",
         "jest-watch-typeahead": "^0.6.1",
         "mutationobserver-shim": "^0.3.7",
