--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "@prisma/client": "^2.13.0",
         "antd": "^4.8.5",
         "apollo-server-micro": "^2.19.0",
+        "bcrypt": "^5.0.0",
         "graphql": "^15.4.0",
+        "jsonwebtoken": "^8.5.1",
         "next": "latest",
         "nexus": "^1.0.0",
         "nexus-plugin-prisma": "^0.27.0",
@@ -37,6 +39,7 @@
         "styled-components": "^5.2.1"
     },
     "devDependencies": {
+        "@babel/core": "^7.12.10",
         "@graphql-codegen/cli": "^1.19.4",
         "@graphql-codegen/plugin-helpers": "^1.18.2",
         "@graphql-codegen/typescript": "^1.19.0",
@@ -48,7 +51,10 @@
         "@testing-library/jest-dom": "^5.11.6",
         "@testing-library/react": "^11.2.2",
         "@testing-library/user-event": "^12.3.0",
+        "@types/bcrypt": "^3.0.0",
+        "@types/express": "^4.17.9",
         "@types/jest": "^26.0.16",
+        "@types/jsonwebtoken": "^8.5.0",
         "@types/node": "^12.12.21",
         "@types/react": "^16.9.16",
         "@types/react-dom": "^16.9.4",
