--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "@prisma/client": "^2.13.0",
         "antd": "^4.8.5",
         "apollo-server-micro": "^2.19.0",
-        "bcrypt": "^5.0.0",
+        "bcryptjs": "^2.4.3",
         "graphql": "^15.4.0",
         "jsonwebtoken": "^8.5.1",
         "next": "latest",
@@ -36,7 +36,8 @@
         "react-dom": "^16.12.0",
         "react-icons": "^4.1.0",
         "react-spring": "^8.0.27",
-        "styled-components": "^5.2.1"
+        "styled-components": "^5.2.1",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@babel/core": "^7.12.10",
@@ -52,6 +53,7 @@
         "@testing-library/react": "^11.2.2",
         "@testing-library/user-event": "^12.3.0",
         "@types/bcrypt": "^3.0.0",
+        "@types/bcryptjs": "^2.4.2",
         "@types/express": "^4.17.9",
         "@types/jest": "^26.0.16",
         "@types/jsonwebtoken": "^8.5.0",
@@ -59,6 +61,7 @@
         "@types/react": "^16.9.16",
         "@types/react-dom": "^16.9.4",
         "@types/styled-components": "^5.1.4",
+        "@types/uuid": "^8.3.0",
         "babel-jest": "^26.6.3",
         "babel-plugin-styled-components": "^1.12.0",
         "concurrently": "^5.3.0",
