--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "@prisma/client": "^2.13.0",
         "antd": "^4.8.5",
         "apollo-server-micro": "^2.19.0",
-        "bcryptjs": "^2.4.3",
+        "bcrypt": "^5.0.0",
         "graphql": "^15.4.0",
         "jsonwebtoken": "^8.5.1",
         "next": "latest",
@@ -53,7 +53,6 @@
         "@testing-library/react": "^11.2.2",
         "@testing-library/user-event": "^12.3.0",
         "@types/bcrypt": "^3.0.0",
-        "@types/bcryptjs": "^2.4.2",
         "@types/express": "^4.17.9",
         "@types/jest": "^26.0.16",
         "@types/jsonwebtoken": "^8.5.0",
