--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "forceConsistentCasingInFileNames": true,
         "isolatedModules": true,
         "jsx": "preserve",
-        "lib": ["dom", "es2017"],
+        "lib": ["dom", "es2017", "esnext"],
         "module": "esnext",
         "moduleResolution": "node",
         "noEmit": true,
@@ -20,7 +20,7 @@
         "baseUrl": ".",
         "plugins": [{ "name": "nexus/typescript-language-service" }], // To improve the development experience with nexus
         "paths": {
-            "@/components/*": ["components/*"],
+            "components/*": ["components/*"],
             "@actions/*": ["store/actions/*"],
             "@styled/*": ["components/Styled/*"]
         }
