--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "forceConsistentCasingInFileNames": true,
         "isolatedModules": true,
         "jsx": "preserve",
-        "lib": ["dom", "es2017", "esnext"],
+        "lib": ["dom", "es2017"],
         "module": "esnext",
         "moduleResolution": "node",
         "noEmit": true,
@@ -22,7 +22,8 @@
         "paths": {
             "components/*": ["components/*"],
             "@actions/*": ["store/actions/*"],
-            "@styled/*": ["components/Styled/*"]
+            "@styled/*": ["components/Styled/*"],
+            "@graphql/*": ["graphql/*"]
         }
     },
     "exclude": ["node_modules", "**/*.spec.ts", "**/*.spec.tsx", "**/*.test.ts", "**/*.test.tsx"],
