--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "prisma:generate": "npx prisma generate",
         "prisma:push": "npx prisma db push --preview-feature",
         "prisma:studio": "npx prisma studio",
-        "prisma:go": "yarn prisma:generate && yarn prisma:push"
+        "prisma:go": "yarn prisma:generate && yarn prisma:push",
+        "cypress:open": "cypress open"
     },
     "dependencies": {
         "@apollo/client": "^3.3.6",
@@ -65,7 +66,7 @@
         "babel-jest": "^26.6.3",
         "babel-plugin-styled-components": "^1.12.0",
         "concurrently": "^5.3.0",
-        "cypress": "^6.3.0",
+        "cypress": "^6.8.0",
         "graphql-let": "^0.16.3",
         "jest": "^26.6.3",
         "jest-watch-typeahead": "^0.6.1",
