--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
         "strict": true,
         "target": "esnext",
         "types": ["cypress"],
+        "typeRoots": ["./support"],
         "baseUrl": ".",
         "plugins": [{ "name": "nexus/typescript-language-service" }], // To improve the development experience with nexus
         "paths": {
@@ -27,6 +28,6 @@
             "@graphql/*": ["graphql/*"]
         }
     },
-    "exclude": ["node_modules", "**/*.spec.ts", "**/*.spec.tsx", "**/*.test.ts", "**/*.test.tsx"],
-    "include": ["**/*.ts", "**/*.tsx"]
+    "exclude": ["node_modules", "**/*.spec.ts", "**/*.spec.tsx", "**/*.test.ts", "**/*.test.tsx", "cypress"],
+    "include": ["**/*.ts", "**/*.tsx", "cypress/*/*.ts", "node_modules/cypress"]
 }
