Major bugs fixed.

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,14 @@ yarn-error.log*
 
 # VScode
 .history/
+
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Build output
+.next
+.next-tf
