--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
     "name": "with-typescript",
     "version": "1.0.0",
     "scripts": {
-        "dev": "concurrently \"NODE_OPTIONS='--inspect' next dev \" \"yarn codegen\" ",
-        "build": "yarn codegen && next build",
+        "dev": "concurrently \"next dev\" \"yarn codegen\" ",
+        "debug": "NODE_OPTIONS='--inspect' next dev",
+        "build": "next build",
         "test": "yarn codegen && jest",
         "start": "next start",
         "test:watch": "yarn jest -- --watch",
@@ -11,12 +12,15 @@
         "codegen": "npx graphql-codegen --watch",
         "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
         "dev:migrate": "npx prisma migrate dev --preview-feature && npx prisma db push --preview-feature",
-        "generate:nexus": "ts-node --transpile-only -P nexus.tsconfig.json pages/api",
+        "generate:nexus": "ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\"}' graphql/schema",
         "prisma:generate": "npx prisma generate",
         "prisma:push": "npx prisma db push --preview-feature",
         "prisma:studio": "npx prisma studio",
         "prisma:go": "yarn prisma:generate && yarn prisma:push",
-        "cypress:open": "cypress open"
+        "cypress:open": "cypress open",
+        "tf-next": "tf-next build",
+        "watch": "tsc --watch --noEmit --project './tsconfig.json'",
+        "setup": "./bin/setup.sh"
     },
     "dependencies": {
         "@apollo/client": "^3.3.6",
@@ -25,7 +29,7 @@
         "@graphql-tools/schema": "^7.1.2",
         "@nexus/schema": "^0.20.1",
         "@prisma/client": "^2.13.0",
-        "antd": "^4.8.5",
+        "antd": "^4.14.1",
         "apollo-link-token-refresh": "^0.3.2",
         "apollo-server-micro": "^2.19.0",
         "bcrypt": "^5.0.0",
@@ -34,8 +38,8 @@
         "next": "latest",
         "nexus": "^1.0.0",
         "nexus-plugin-prisma": "^0.27.0",
-        "react": "^16.12.0",
-        "react-dom": "^16.12.0",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
         "react-icons": "^4.1.0",
         "react-spring": "^8.0.27",
         "styled-components": "^5.2.1",
@@ -49,7 +53,6 @@
         "@graphql-codegen/typescript-operations": "^1.17.12",
         "@graphql-codegen/typescript-react-apollo": "^2.2.1",
         "@graphql-codegen/typescript-resolvers": "^1.18.0",
-        "@prisma/cli": "^2.13.0",
         "@testing-library/dom": "^7.28.1",
         "@testing-library/jest-dom": "^5.11.6",
         "@testing-library/react": "^11.2.2",
@@ -59,8 +62,8 @@
         "@types/jest": "^26.0.16",
         "@types/jsonwebtoken": "^8.5.0",
         "@types/node": "^12.12.21",
-        "@types/react": "^16.9.16",
-        "@types/react-dom": "^16.9.4",
+        "@types/react": "^17.0.2",
+        "@types/react-dom": "^17.0.1",
         "@types/styled-components": "^5.1.4",
         "@types/uuid": "^8.3.0",
         "babel-jest": "^26.6.3",
@@ -71,8 +74,10 @@
         "jest": "^26.6.3",
         "jest-watch-typeahead": "^0.6.1",
         "mutationobserver-shim": "^0.3.7",
+        "prisma": "^2.19.0",
+        "tf-next": "^0.6.1",
         "ts-jest": "^26.4.4",
-        "typescript": "4.0",
+        "typescript": "4.2.3",
         "yaml-loader": "^0.6.0"
     },
     "license": "MIT"
