--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -75,13 +75,13 @@ jobs:
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Format
       id: fmt
-      working-directory: terraform
+      working-directory: ./terraform
       run: terraform fmt -check
       
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Init
       id: init
-      working-directory: terraform
+      working-directory: ./terraform
       run: terraform init
 
 
@@ -90,7 +90,7 @@ jobs:
       id: plan
       if: github.event_name == 'pull_request'
       run: terraform plan -no-color
-      working-directory: terraform
+      working-directory: ./terraform
       continue-on-error: true
       
     # Adds a comment to the pull request with the results of the format  
@@ -120,7 +120,7 @@ jobs:
     # Returns whether a plan was successfully generated or not. 
     - name: Terraform Plan Status
       if: steps.plan.outcome == 'failure'
-      working-directory: terraform
+      working-directory: ./terraform
       run: exit 1
 
 
@@ -129,5 +129,5 @@ jobs:
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
       if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
-      working-directory: terraformG
+      working-directory: ./terraform
       run: terraform apply -auto-approve
