--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -73,10 +73,10 @@ jobs:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Format
-      id: fmt
-      working-directory: ./terraform
-      run: terraform fmt -check
+    # - name: Terraform Format
+    #   id: fmt
+    #   working-directory: ./terraform
+    #   run: terraform fmt -check
       
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Init
